refactor: improve markdown

--- a/notebooks/Iris_Classification.ipynb
+++ b/notebooks/Iris_Classification.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b08caca6-aeab-4587-ae7e-40a994bdbd3e",
+   "cell_type": "markdown",
+   "id": "66e6bd2a-260f-4ecc-9eda-e1a0b5d2db80",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## My first ML project"
    ]
@@ -21,18 +19,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0af833c8-46ed-4a09-81e0-b6d862820a55",
+   "cell_type": "markdown",
+   "id": "b7ed90bb-7759-4f95-b8f9-a32d6c406cd2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Loading the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "a73dae43-91a1-4b60-8de3-518fcc9fd667",
    "metadata": {},
    "outputs": [],
@@ -41,29 +37,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "53b3568e-364b-4450-aabc-cf88ce1d5d08",
+   "cell_type": "markdown",
+   "id": "0d27cea3-e4c7-42ba-bf09-2d77f2d7c570",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Summarize the Dataset\n",
-    "# Explore the data both with descriptive statistics and data visualization."
+    "### Summarize the Dataset\n",
+    "Explore the data both with descriptive statistics and data visualization."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f2b25e66-502b-4aed-bffb-e653d4d4ad8a",
+   "cell_type": "markdown",
+   "id": "557c61b8-93d8-415a-9910-dde6b2234ee2",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Descriptive statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "31258387-af6b-40de-9fc0-9fe384f2f548",
    "metadata": {},
    "outputs": [
@@ -149,7 +141,7 @@
        "4           5.0          3.6           1.4          0.2  Iris-setosa"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "65379f22-286c-4c6a-b079-6d757d0dba5b",
    "metadata": {},
    "outputs": [
@@ -171,7 +163,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "47f1e7cd-d44a-4ace-bc6a-86f5cc8a5142",
    "metadata": {},
    "outputs": [
@@ -287,7 +279,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,9 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "f1c486c0-2e90-4ebd-9186-9ba36edb54ca",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -314,7 +308,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,11 +318,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c0db96d2-059f-4b7e-b491-6140954d1107",
+   "cell_type": "markdown",
+   "id": "2dda26c2-8bf4-44cb-b681-14f67aa30e31",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Data visualization"
    ]
